k8s/front/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: javapro-team33
spec:
  selector:
    app: frontend
  ports:
    - port: 8097
      protocol: TCP
      targetPort: 80
  type: NodePort
