k8s/front/front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: javapro-team33
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: ingress
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 8097
